# KageShirei

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  Makefile.toml  README.md  SECURITY.md  build.py  clippy.toml  docker-compose.yml  mod-wasm-hello-world.wasmer  mod-wasm-hello-world.wasmtime  rustfmt.toml
agent/: Cargo.toml  Makefile.toml
agent/src/: command.rs  commands.rs  common.rs  handler.rs  init.rs  main.rs  nostd_runtime_test.rs  nt_runtime_test.rs  spawner.rs  tests.rs  wain_imp.rs  wasmer_imp.rs  wasmi_imp.rs  wasmtime_imp.rs
agent/src/command/: filesystem.rs  handler.rs  mod.rs  process.rs  system.rs
agent/src/common/: utils.rs
agent/src/setup/: allocator.rs  communication.rs  mod.rs  runtime_manager.rs  system_data.rs
command-and-control-gui/src-tauri/: Cargo.toml  tauri.conf.json
command-and-control-gui/src-tauri/src/: main.rs
extensions/sample-extension/: Cargo.toml  README.md
extensions/sample-extension/src/: lib.rs
libs/coffee/: Cargo.toml  README.md
libs/coffee/src/: main.rs
libs/coffee/src/loader/: beacon_api.rs  mod.rs
libs/kageshirei-communication-protocol/: Cargo.toml  README.md
libs/kageshirei-communication-protocol/src/: error.rs  format.rs  lib.rs  magic_numbers.rs  metadata.rs  network_interface.rs  protocol.rs  sender.rs
libs/kageshirei-communication-protocol/src/communication/: agent_commands.rs  basic_agent_response.rs  checkin.rs  mod.rs  simple_agent_command.rs  task_output.rs
libs/kageshirei-communication-protocol/src/communication_structs/: agent_commands.rs  basic_agent_response.rs  checkin.rs  task_output.rs
libs/kageshirei-communication-protocol/src/sender/: terminal_sender.rs
libs/kageshirei-crypt/: Cargo.toml
libs/kageshirei-crypt/src/: argon.rs  crypt_error.rs  lib.rs  symmetric_encryption_algorithm.rs  test_util.rs  util.rs
libs/kageshirei-crypt/src/encoder/: base32.rs  base64.rs  encoder.rs  encoding_variant.rs  hex.rs  mod.rs
libs/kageshirei-crypt/src/encryption_algorithm/: algorithms.rs  asymmetric_algorithm.rs  asymmetric_encryption_algorithm.rs  encryption_algorithm.rs  ident_algorithm.rs  mod.rs  symmetric_encryption_algorithm.rs  with_key_derivation.rs  xchacha20poly1305_algorithm.rs
libs/kageshirei-crypt/src/hash/: argon.rs
libs/kageshirei-extensions/: Cargo.toml
libs/kageshirei-extensions-macros/: Cargo.toml
libs/kageshirei-extensions-macros/src/: lib.rs
libs/kageshirei-extensions/src/: extension_def.rs  lib.rs  manager.rs
libs/kageshirei-format-json/: Cargo.toml
libs/kageshirei-format-json/src/: lib.rs
libs/kageshirei-indirect-syscall/: Cargo.toml
libs/kageshirei-indirect-syscall/src/: lib.rs  syscall.rs
libs/kageshirei-runtime/: Cargo.toml
libs/kageshirei-runtime/src/: lib.rs  runtime.rs
libs/kageshirei-utils/: Cargo.toml
libs/kageshirei-utils/src/: bytes_to_string.rs  duration_extension.rs  lib.rs  print_validation_error.rs  unrecoverable_error.rs  unwrap_infallible.rs
libs/kageshirei-win32/: Cargo.toml
libs/kageshirei-win32/src/: crypt32.rs  kernel32.rs  lib.rs  macros.rs  ntapi.rs  ntdef.rs  ntstatus.rs  sspicli.rs  utils.rs  winhttp.rs  ws2_32.rs
libs/mod-coff-hello-world/: Cargo.toml  Makefile.toml  linker_script.ld
libs/mod-coff-hello-world/src/: lib.rs
libs/rs2-communication-protocol/: Cargo.toml
libs/rs2-communication-protocol/src/: encryptor.rs  error.rs  lib.rs  metadata.rs  network_interface.rs  protocol.rs  sender.rs
libs/rs2-crypt/: Cargo.toml
libs/rs2-crypt/src/: argon.rs  asymmetric_encryption.rs  encoder.rs  encryption_algorithm.rs  lib.rs  symmetric_encryption_algorithm.rs
libs/rs2-utils/: Cargo.toml
libs/rs2-utils/src/: bytes_to_string.rs  duration_extension.rs  lib.rs  print_validation_error.rs  unrecoverable_error.rs  unwrap_infallible.rs
modules/mod-agentcore/: Cargo.toml  Makefile.toml
modules/mod-agentcore/src/: common.rs  ldr.rs  lib.rs
modules/mod-coffee-core/: Cargo.toml
modules/mod-coffee-core/src/: lib.rs
modules/mod-hhtgates/: Cargo.toml  Makefile.toml
modules/mod-hhtgates/src/: lib.rs
modules/mod-nostd/: Cargo.toml
modules/mod-nostd-nt-runtime/: Cargo.toml
modules/mod-nostd-nt-runtime/src/: lib.rs  nostd_nt_runtime.rs  nostd_nt_threadpool.rs
modules/mod-nostd-runtime/: Cargo.toml
modules/mod-nostd-runtime/src/: lib.rs  nostd_channel.rs  nostd_runtime.rs  nostd_threadpool.rs
modules/mod-nostd/src/: lib.rs  nostd_mpsc.rs  nostd_thread.rs
modules/mod-nt-heapalloc/: Cargo.toml
modules/mod-nt-heapalloc/src/: lib.rs  nt_heapalloc_def.rs
modules/mod-nt-runtime/: Cargo.toml
modules/mod-nt-runtime/src/: channel.rs  lib.rs  nt_threadpool.rs
modules/mod-nt-virtualalloc/: Cargo.toml  Makefile.toml
modules/mod-nt-virtualalloc/src/: lib.rs
modules/mod-ntallocator/: Cargo.toml  Makefile.toml
modules/mod-ntallocator/src/: lib.rs
modules/mod-protocol-http/: Cargo.toml
modules/mod-protocol-http/src/: lib.rs  std.rs
server/: .env.example  Cargo.toml  README.md  build.rs  config.json  diesel.toml  sample-config.json  server-config.schema.json
server/ks-server/: .gitignore  .secrets.local.cue  encore.app  infra-config.dev.json  infra-config.json  package-lock.json  package.json  tsconfig.json  vitest.config.js
server/ks-server/src/: database.ts  secrets.ts
server/migrations/2024-05-16-142244_create_users_table/: up.sql
server/sample-tls-certificates/: cert.pem  key.pem
server/src/: async_ctx.rs  async_main.rs  auto_migrate.rs  cli_interface.rs  config.rs  hook_contexes.rs  main.rs  print_validation_error.rs  unrecoverable_error.rs
server/src/async_main/: api_server.rs
server/src/cli/: base.rs  compile.rs  generate.rs  mod.rs  run.rs
server/src/cli_cmd_compile/: c2_gui.rs  mod.rs
server/src/cli_cmd_generate/: certificate.rs  dummy_data.rs  jwt.rs  mod.rs  operator.rs
server/src/compile/: c2_gui.rs  mod.rs
server/src/config/: api_server.rs  config.rs  database.rs  jwt.rs  log.rs  mod.rs  validators.rs
server/src/database/: migration.rs  mod.rs  schema.rs
server/src/generate/: jwt.rs
server/src/servers/: api_server.rs  http_handler.rs  mod.rs
(+363 files in other folders)
