[workspace]
members = [
    "agent",
    "command-and-control-gui/src-tauri",
    "libs/coffee",
    "libs/kageshirei-communication-protocol",
    "libs/kageshirei-crypt",
    "libs/kageshirei-indirect-syscall",
    "libs/kageshirei-utils",
    "libs/kageshirei-win32",
    "modules/mod-agentcore",
    "modules/mod-hhtgates",
    "modules/mod-loader-coffee-core",
    "modules/mod-nostd",
    "modules/mod-nostd-nt-runtime",
    "modules/mod-nt-heapalloc",
    "modules/mod-nt-virtualalloc",
    "modules/mod-protocol-json",
    "modules/mod-protocol-winhttp",
    "modules/mod-std-runtime",
    "modules/mod-tokio-runtime",
    "modules/mod-win32",
    "modules/srv-mod-config",
    "modules/srv-mod-entity",
    "modules/srv-mod-handler-base",
    "modules/srv-mod-handler-http",
    "modules/srv-mod-migration",
    "modules/srv-mod-operator-api",
    "modules/srv-mod-terminal-emulator-commands",
    "server",
]
resolver = "2"
package = { authors = ["ebalo <me@ebalo.xyz>", "Safe"], edition = "2021", version = "0.1.0" }