[workspace]
members = [
    "agent",
    "command-and-control-gui/src-tauri",
    "libs/coffee",
    "libs/kageshirei-communication-protocol",
    "libs/kageshirei-crypt",
    "libs/kageshirei-indirect-syscall",
    "libs/kageshirei-utils",
    "libs/kageshirei-win32",
    "modules/mod-agentcore",
    "modules/mod-hhtgates",
    "modules/mod-coffee-core",
    "modules/mod-nostd",
    "modules/mod-nostd-nt-runtime",
    "modules/mod-nt-heapalloc",
    "modules/mod-nt-virtualalloc",
    "modules/mod-protocol-http",
    "modules/mod-std-runtime",
    "modules/mod-tokio-runtime",
    "modules/mod-win32",
    "modules/srv-mod-config",
    "modules/srv-mod-entity",
    "modules/srv-mod-handler-base",
    "modules/srv-mod-handler-http",
    "modules/srv-mod-migration",
    "modules/srv-mod-operator-api",
    "modules/srv-mod-terminal-emulator-commands",
    "server",
    "libs/kageshirei-format-json", "libs/kageshirei-extensions",
]
resolver = "2"

[workspace.package]
authors = ["ebalo <me@ebalo.xyz>", "Safe"]
edition = "2021"
version = "0.1.0"
rust-version = "1.83.0"
readme = "README.md"

[workspace.lints.clippy]
alloc_instead_of_core = "deny"
allow_attributes = "allow"
allow_attributes_without_reason = "deny"
almost_complete_range = "warn"
approx_constant = "deny"
arithmetic_side_effects = "deny"
as_conversions = "allow"
as_ptr_cast_mut = "deny"
as_underscore = "deny"
assertions_on_constants = "deny"
assertions_on_result_states = "deny"
await_holding_invalid_type = "warn"
await_holding_lock = "deny"
await_holding_refcell_ref = "warn"
bad_bit_mask = "deny"
big_endian_bytes = "allow"
borrowed_box = "deny"
boxed_local = "deny"
branches_sharing_code = "deny"
byte_char_slices = "deny"
cargo_common_metadata = "warn"
cast_abs_to_unsigned = "deny"
cfg_not_test = "warn"
char_lit_as_u8 = "deny"
clear_with_drain = "deny"
clone_on_ref_ptr = "allow"
cognitive_complexity = "warn"
collapsible_else_if = "deny"
collapsible_if = "deny"
collapsible_match = "deny"
collapsible_str_replace = "deny"
collection_is_never_read = "deny"
comparison_chain = "deny"
const_is_empty = "deny"
crate_in_macro_def = "deny"
create_dir = "deny"
dbg_macro = "deny"
debug_assert_with_mut_call = "deny"
decimal_literal_representation = "deny"
default_constructed_unit_structs = "deny"
default_numeric_fallback = "allow"
default_union_representation = "deny"
deprecated_semver = "deny"
deref_by_slicing = "deny"
derive_partial_eq_without_eq = "deny"
disallowed_macros = "warn"
disallowed_methods = "warn"
disallowed_names = "deny"
disallowed_script_idents = "deny"
disallowed_types = "warn"
diverging_sub_expression = "deny"
doc_lazy_continuation = "deny"
drain_collect = "deny"
drop_non_drop = "deny"
duplicated_attributes = "deny"
duration_subsec = "deny"
eager_transmute = "deny"
else_if_without_else = "allow"
empty_drop = "warn"
empty_enum_variants_with_brackets = "deny"
empty_line_after_outer_attr = "deny"
empty_loop = "warn"
empty_structs_with_brackets = "deny"
eq_op = "deny"
equatable_if_let = "deny"
err_expect = "deny"
error_impl_error = "deny"
exhaustive_enums = "allow"
exhaustive_structs = "allow"
exit = "deny"
expect_fun_call = "deny"
expect_used = "deny"
explicit_auto_deref = "deny"
explicit_counter_loop = "deny"
explicit_write = "warn"
extend_with_drain = "deny"
extra_unused_lifetimes = "deny"
extra_unused_type_parameters = "deny"
fallible_impl_from = "deny"
field_reassign_with_default = "deny"
field_scoped_visibility_modifiers = "warn"
filetype_is_file = "deny"
filter_map_bool_then = "deny"
filter_map_identity = "deny"
filter_next = "deny"
flat_map_identity = "deny"
float_arithmetic = "allow"
float_cmp_const = "deny"
float_equality_without_abs = "deny"
fn_address_comparisons = "deny"
fn_to_numeric_cast = "deny"
fn_to_numeric_cast_any = "warn"
fn_to_numeric_cast_with_truncation = "warn"
for_kv_map = "deny"
forget_non_drop = "deny"
format_collect = "deny"
format_in_format_args = "deny"
format_push_string = "deny"
four_forward_slashes = "deny"
from_over_into = "deny"
from_raw_with_void_ptr = "deny"
from_str_radix_10 = "warn"
future_not_send = "deny"
get_first = "deny"
get_last_with_len = "deny"
get_unwrap = "warn"
host_endian_bytes = "allow"
identity_op = "deny"
if_let_mutex = "deny"
if_same_then_else = "deny"
if_then_some_else_none = "warn"
ifs_same_cond = "deny"
impl_hash_borrow_with_str_and_bytes = "deny"
impl_trait_in_params = "deny"
implicit_return = "allow"
implicit_saturating_add = "deny"
implicit_saturating_sub = "deny"
implied_bounds_in_impls = "deny"
impossible_comparisons = "deny"
imprecise_flops = "warn"
incompatible_msrv = "deny"
inconsistent_digit_grouping = "deny"
indexing_slicing = "deny"
ineffective_bit_mask = "deny"
ineffective_open_options = "deny"
infallible_destructuring_match = "deny"
infinite_iter = "deny"
infinite_loop = "deny"
inherent_to_string = "deny"
inherent_to_string_shadow_display = "deny"
init_numbered_fields = "deny"
inline_asm_x86_att_syntax = "deny"
inline_asm_x86_intel_syntax = "allow"
inline_fn_without_body = "deny"
inspect_for_each = "deny"
int_plus_one = "deny"
integer_division = "allow"
integer_division_remainder_used = "warn"
into_iter_on_ref = "deny"
invalid_null_ptr_usage = "deny"
invalid_regex = "deny"
inverted_saturating_sub = "deny"
invisible_characters = "deny"
is_digit_ascii_radix = "deny"
items_after_test_module = "deny"
iter_cloned_collect = "deny"
iter_count = "deny"
iter_kv_map = "deny"
iter_next_loop = "deny"
iter_next_slice = "deny"
iter_nth = "deny"
iter_nth_zero = "deny"
iter_on_empty_collections = "allow"
iter_on_single_items = "allow"
iter_out_of_bounds = "deny"
iter_over_hash_type = "allow"
iter_overeager_cloned = "warn"
iter_skip_next = "deny"
iter_skip_zero = "deny"
iter_with_drain = "deny"
iterator_step_by_zero = "deny"
join_absolute_paths = "deny"
just_underscores_and_digits = "deny"
large_const_arrays = "warn"
large_enum_variant = "deny"
large_include_file = "deny"
large_stack_frames = "deny"
legacy_numeric_constants = "deny"
len_without_is_empty = "deny"
len_zero = "deny"
let_and_return = "deny"
let_underscore_future = "warn"
let_underscore_lock = "deny"
let_underscore_must_use = "deny"
let_underscore_untyped = "allow"
let_unit_value = "deny"
let_with_type_underscore = "deny"
lines_filter_map_ok = "warn"
lint_groups_priority = "deny"
little_endian_bytes = "allow"
lossy_float_literal = "deny"
macro_metavars_in_unsafe = "warn"
main_recursion = "deny"
manual_async_fn = "deny"
manual_bits = "deny"
manual_c_str_literals = "deny"
manual_clamp = "deny"
manual_div_ceil = "deny"
manual_filter = "deny"
manual_filter_map = "deny"
manual_find = "deny"
manual_find_map = "deny"
manual_flatten = "deny"
manual_hash_one = "deny"
# manual_ignore_case_cmp = "deny" Not found by clippy, deprecated?
manual_inspect = "deny"
manual_is_ascii_check = "deny"
manual_is_finite = "deny"
manual_is_infinite = "deny"
manual_is_power_of_two = "deny"
manual_main_separator_str = "deny"
manual_map = "deny"
manual_memcpy = "deny"
manual_next_back = "deny"
manual_non_exhaustive = "deny"
manual_pattern_char_comparison = "deny"
manual_range_contains = "deny"
manual_range_patterns = "deny"
manual_rem_euclid = "deny"
manual_retain = "deny"
manual_rotate = "deny"
manual_saturating_arithmetic = "deny"
manual_slice_size_calculation = "deny"
manual_split_once = "deny"
manual_str_repeat = "deny"
manual_strip = "deny"
manual_swap = "deny"
manual_try_fold = "deny"
manual_unwrap_or = "deny"
manual_unwrap_or_default = "deny"
manual_while_let_some = "deny"
map_clone = "deny"
map_collect_result_unit = "deny"
map_entry = "deny"
map_err_ignore = "deny"
map_flatten = "deny"
map_identity = "deny"
match_as_ref = "deny"
match_like_matches_macro = "deny"
match_overlapping_arm = "deny"
match_ref_pats = "deny"
match_result_ok = "deny"
match_single_binding = "deny"
match_str_case_mismatch = "deny"
mem_forget = "deny"
mem_replace_option_with_none = "deny"
mem_replace_with_default = "deny"
mem_replace_with_uninit = "deny"
min_ident_chars = "allow"
min_max = "deny"
misnamed_getters = "warn"
misrefactored_assign_op = "deny"
missing_assert_message = "deny"
missing_asserts_for_indexing = "allow"
missing_const_for_fn = "deny"
missing_const_for_thread_local = "deny"
missing_docs_in_private_items = "warn"
missing_enforced_import_renames = "deny"
missing_inline_in_public_items = "allow"
missing_safety_doc = "deny"
missing_spin_loop = "deny"
missing_trait_methods = "allow"
missing_transmute_annotations = "deny"
mistyped_literal_suffixes = "deny"
mixed_attributes_style = "deny"
mixed_case_hex_literals = "deny"
mixed_read_write_in_expression = "deny"
mod_module_files = "allow"
module_inception = "deny"
module_name_repetitions = "deny"
modulo_arithmetic = "allow"
modulo_one = "deny"
multi_assignments = "deny"
multiple_bound_locations = "deny"
multiple_crate_versions = "allow"
multiple_inherent_impl = "deny"
multiple_unsafe_ops_per_block = "allow"
must_use_unit = "deny"
mut_from_ref = "deny"
mut_mutex_lock = "deny"
mut_range_bound = "warn"
mutable_key_type = "deny"
mutex_atomic = "warn"
mutex_integer = "warn"
needless_arbitrary_self_type = "deny"
needless_bool = "deny"
needless_bool_assign = "deny"
needless_borrow = "deny"
needless_borrowed_reference = "deny"
needless_borrows_for_generic_args = "deny"
needless_character_iteration = "deny"
needless_collect = "deny"
needless_doctest_main = "deny"
needless_else = "deny"
needless_if = "deny"
needless_late_init = "deny"
needless_lifetimes = "deny"
needless_match = "deny"
needless_maybe_sized = "deny"
needless_option_as_deref = "deny"
needless_option_take = "deny"
needless_parens_on_range_literals = "deny"
needless_pass_by_ref_mut = "deny"
needless_pub_self = "deny"
needless_question_mark = "deny"
needless_range_loop = "deny"
needless_raw_strings = "deny"
needless_return = "deny"
needless_return_with_question_mark = "deny"
needless_splitn = "deny"
needless_update = "deny"
neg_cmp_op_on_partial_ord = "deny"
neg_multiply = "deny"
negative_feature_names = "warn"
never_loop = "deny"
new_ret_no_self = "deny"
new_without_default = "warn"
no_effect = "deny"
no_effect_replace = "deny"
non_ascii_literal = "warn"
non_canonical_clone_impl = "warn"
non_canonical_partial_ord_impl = "deny"
non_minimal_cfg = "deny"
non_octal_unix_permissions = "deny"
non_send_fields_in_send_ty = "deny"
non_zero_suggestions = "deny"
nonminimal_bool = "deny"
nonsensical_open_options = "deny"
nonstandard_macro_braces = "deny"
not_unsafe_ptr_arg_deref = "deny"
obfuscated_if_else = "deny"
octal_escapes = "deny"
ok_expect = "deny"
only_used_in_recursion = "deny"
op_ref = "warn"
option_as_ref_deref = "deny"
option_env_unwrap = "deny"
option_filter_map = "deny"
option_if_let_else = "deny"
option_map_or_err_ok = "deny"
option_map_or_none = "deny"
option_map_unit_fn = "deny"
or_fun_call = "allow"
or_then_unwrap = "deny"
out_of_bounds_indexing = "deny"
overly_complex_bool_expr = "deny"
panic = "deny"
panic_in_result_fn = "deny"
panicking_overflow_checks = "deny"
panicking_unwrap = "deny"
partial_pub_fields = "allow"
partialeq_ne_impl = "deny"
partialeq_to_none = "deny"
path_buf_push_overwrite = "deny"
path_ends_with_ext = "allow"
pathbuf_init_then_push = "deny"
pattern_type_mismatch = "deny"
permissions_set_readonly_false = "warn"
pointers_in_nomem_asm_block = "warn"
possible_missing_comma = "deny"
precedence = "deny"
print_in_format_impl = "deny"
print_literal = "deny"
print_stderr = "deny"
print_stdout = "deny"
print_with_newline = "allow"
println_empty_string = "deny"
ptr_arg = "deny"
ptr_eq = "deny"
ptr_offset_with_cast = "deny"
pub_use = "allow"
pub_with_shorthand = "allow"
pub_without_shorthand = "deny"
question_mark = "deny"
question_mark_used = "allow"
range_zip_with_len = "deny"
rc_buffer = "allow"
rc_clone_in_vec_init = "warn"
rc_mutex = "deny"
read_line_without_trim = "deny"
read_zero_byte_vec = "deny"
readonly_write_lock = "deny"
recursive_format_impl = "deny"
redundant_allocation = "deny"
redundant_as_str = "deny"
redundant_async_block = "deny"
redundant_at_rest_pattern = "deny"
redundant_clone = "deny"
redundant_closure = "deny"
redundant_closure_call = "deny"
redundant_comparisons = "deny"
redundant_feature_names = "deny"
redundant_field_names = "deny"
redundant_guards = "deny"
redundant_locals = "deny"
redundant_pattern = "deny"
redundant_pattern_matching = "deny"
redundant_pub_crate = "deny"
redundant_slicing = "deny"
redundant_static_lifetimes = "deny"
redundant_type_annotations = "deny"
ref_patterns="allow"
# regex_creation_in_loops="deny" Not found by clippy, deprecated?
renamed_function_params="allow"
repeat_once="deny"
repeat_vec_with_capacity="deny"
reserve_after_initialization="deny"
rest_pat_in_fully_bound_structs="deny"
result_filter_map="deny"
result_large_err="deny"
result_map_or_into_option="deny"
result_map_unit_fn="deny"
result_unit_err="deny"
reversed_empty_ranges="deny"
same_item_push="deny"
same_name_method="deny"
search_is_some="deny"
seek_from_current="deny"
seek_to_start_instead_of_rewind="deny"
self_assignment="deny"
self_named_constructors="deny"
self_named_module_files="deny"
semicolon_inside_block="deny"
semicolon_outside_block="allow"
separated_literal_suffix="deny"
serde_api_misuse="deny"
set_contains_or_insert="deny"
shadow_reuse="allow"
shadow_same="allow"
shadow_unrelated="allow"
short_circuit_statement="deny"
should_implement_trait="deny"
significant_drop_in_scrutinee="deny"
significant_drop_tightening="deny"
single_call_fn="allow"
single_char_add_str="deny"
single_char_lifetime_names="allow"
single_component_path_imports="deny"
single_element_loop="deny"
single_match="deny"
single_range_in_vec_init="deny"
size_of_in_element_count="deny"
size_of_ref="warn"
skip_while_next="deny"
slow_vector_initialization="deny"
std_instead_of_alloc="allow"
std_instead_of_core="allow"
str_to_string="deny"
string_add="allow"
string_extend_chars="deny"
string_from_utf8_as_bytes="deny"
string_lit_as_bytes="allow"
string_lit_chars_any="deny"
string_slice="allow"
string_to_string="deny"
strlen_on_c_strings="deny"
suboptimal_flops="deny"
suspicious_arithmetic_impl="warn"
suspicious_assignment_formatting="deny"
suspicious_command_arg_space="warn"
suspicious_doc_comments="deny"
suspicious_else_formatting="deny"
suspicious_map="deny"
suspicious_op_assign_impl="deny"
suspicious_open_options="deny"
suspicious_operation_groupings="warn"
suspicious_splitn="deny"
suspicious_to_owned="deny"
suspicious_unary_op_formatting="deny"
suspicious_xor_used_as_pow="warn"
swap_ptr_to_ref="deny"
tabs_in_doc_comments="deny"
temporary_assignment="deny"
test_attr_in_doctest="deny"
tests_outside_test_module="deny"
to_digit_is_some="deny"
to_string_in_format_args="deny"
to_string_trait_impl="deny"
todo="deny"
too_long_first_doc_paragraph="deny"
too_many_arguments="deny"
toplevel_ref_arg="deny"
trailing_empty_array="deny"
trait_duplication_in_bounds="deny"
transmute_bytes_to_str="deny"
transmute_float_to_int="deny"
transmute_int_to_bool="deny"
transmute_int_to_char="deny"
transmute_int_to_float="deny"
transmute_int_to_non_zero="deny"
transmute_null_to_fn="deny"
transmute_num_to_bytes="deny"
transmute_ptr_to_ref="deny"
transmute_undefined_repr="allow"
transmutes_expressible_as_ptr_casts="deny"
transmuting_null="deny"
trim_split_whitespace="warn"
trivial_regex="deny"
try_err="deny"
tuple_array_conversions="deny"
type_complexity="warn"
type_id_on_box="deny"
type_repetition_in_bounds="deny"
unconditional_recursion="deny"
undocumented_unsafe_blocks="allow"
unimplemented="deny"
uninhabited_references="deny"
uninit_assumed_init="deny"
uninit_vec="deny"
unit_arg="deny"
unit_cmp="deny"
unit_hash="deny"
unit_return_expecting_ord="deny"
unnecessary_cast="deny"
unnecessary_clippy_cfg="deny"
unnecessary_fallible_conversions="deny"
unnecessary_filter_map="deny"
unnecessary_find_map="deny"
unnecessary_first_then_check="deny"
unnecessary_fold="deny"
unnecessary_get_then_check="deny"
unnecessary_lazy_evaluations="deny"
unnecessary_literal_unwrap="deny"
unnecessary_map_on_constructor="deny"
unnecessary_min_or_max="deny"
unnecessary_mut_passed="deny"
unnecessary_operation="deny"
unnecessary_owned_empty_strings="deny"
unnecessary_result_map_or_else="deny"
unnecessary_safety_comment="deny"
unnecessary_safety_doc="deny"
unnecessary_self_imports="deny"
unnecessary_sort_by="deny"
unnecessary_struct_initialization="deny"
unnecessary_to_owned="deny"
unnecessary_unwrap="deny"
unneeded_field_pattern="deny"
unneeded_wildcard_pattern="deny"
unreachable="deny"
unsafe_removed_from_name="deny"
unseparated_literal_suffix="allow"
unsound_collection_transmute="deny"
unused_enumerate_index="deny"
unused_format_specs="deny"
unused_io_amount="deny"
unused_peekable="deny"
unused_result_ok="deny"
unused_rounding="deny"
unused_trait_names="deny"
unused_unit="deny"
unusual_byte_groupings="deny"
unwrap_in_result="allow"
unwrap_or_default="allow"
unwrap_used="allow"
upper_case_acronyms="deny"
use_debug="allow"
use_self="deny"
useless_asref="deny"
useless_attribute="deny"
useless_conversion="deny"
useless_format="deny"
useless_let_if_seq="deny"
useless_transmute="deny"
useless_vec="deny"
vec_box="warn"
vec_init_then_push="deny"
vec_resize_to_zero="deny"
verbose_file_reads="deny"
waker_clone_wake="deny"
while_float="deny"
while_immutable_condition="deny"
while_let_loop="deny"
while_let_on_iterator="deny"
wildcard_dependencies="deny"
wildcard_enum_match_arm="deny"
wildcard_in_or_patterns="deny"
write_literal="deny"
write_with_newline="deny"
writeln_empty_string="deny"
wrong_self_convention="deny"
wrong_transmute="deny"
zero_divided_by_zero="deny"
zero_prefixed_literal="deny"
zero_ptr="deny"
zero_repeat_side_effects="deny"
zombie_processes="warn"
zst_offset="deny"
