[package]
name = "rs2-server"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
opt-level = 3
incremental = true
debug-assertions = false
lto = true

[dependencies]
anyhow = "1.0.86" # used
clap = { version = "4.5.4", features = ["derive"] } # used
log = { version = "0.4.21" } # used
fern = { version = "0.6.2", features = ["colored"] } # used
tracing-subscriber = { version = "0.3.18", features = ["json"] }
colored = "2.1.0" # used
nix = { version = "0.29.0", features = ["user"] } # used
serde = { version = "1.0", features = ["derive"] } # used
serde_json = "1.0" # used
rand = { version = "0.8.5" } # used
base64 = "0.22.1" # used
rcgen = { version = "0.13.1" }# used
rs2_utils = { path = "../libs/rs2-utils" }
rs2_crypt = { path = "../libs/rs2-crypt", features = ["argon2"] }
srv-mod-config = { path = "../modules/srv-mod-config" }
srv-mod-operator-api = { path = "../modules/srv-mod-operator-api" }
srv-mod-database = { path = "../modules/srv-mod-database" }
once_cell = "1.19.0"

[features]
