[package]
name = "rs2-command-and-control"
version = "0.1.0"
description = "The command and control client for the RS2 project."
repository = ""
default-run = "rs2-command-and-control"

[profile.release]
strip = true
opt-level = 3
incremental = true
debug-assertions = false
lto = true

[build-dependencies]
tauri-build = { version = "1.5.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.7", features = [] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
