[package]
name = "sample-extension"
version = "0.1.0"
edition = "2021"
categories = ["simulation"]
keywords = ["kageshirei", "agent", "library", "terminal", "emulator"]
repository = "https://github.com/Kageshirei/KageShirei"
license-file = "../../LICENSE"
description = "A library for the KageShirei agent that provides Win32 functionality."
readme = "README.md"

[dependencies]
kageshirei-extensions = { path = "../../libs/kageshirei-extensions" }
kageshirei-extensions-macros = { path = "../../libs/kageshirei-extensions-macros" }

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true
