[package]
name = "coffee-ldr"
version = "0.1.3"
authors = ["biscoito <biscoito@riseup.net>"]
description = "Coffee: A COFF loader made in Rust"
documentation = "https://docs.rs/coffee-ldr/latest"
license = "GPL-3.0-or-later"
homepage = "https://github.com/hakaioffsec/coffee"
repository = "https://github.com/hakaioffsec/coffee"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
# Optimize for size on release.
codegen-units = 1
strip = true
opt-level = "z"
incremental = true
debug-assertions = false
lto = true

[dependencies]
# Command line parsing.
clap = { version = "4.3.5", features = ["derive"] }
# Logging.
tracing-subscriber = "0.3.17"
tracing = { version = "0.1.37", optional = true }
# Error handling.
color-eyre = "0.6.2"
# Implementation
mod-coffee-core = { path = "../mod-loader-coffee-core", features = ["tracing"] }