[package]
name = "kageshirei-communication-protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.210", features = ["derive", "rc"] }
bytes = "1.7.2"
kageshirei-crypt = { path = "../kageshirei-crypt" }
hex-literal = "0.4.1"
sea-orm = { version = "1.0.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono", "with-json"], optional = true }
serde_json = { version = "1.0.128", optional = true }

[features]
default = []
server = ["dep:sea-orm", "dep:serde_json"]

[lints]
workspace = true