[package]
name = "kageshirei-communication-protocol"
version = "0.1.0"
edition = "2021"
categories = ["simulation"]
keywords = ["kageshirei", "agent", "library", "communication", "protocols"]
repository = "https://github.com/Kageshirei/KageShirei"
license-file = "../../LICENSE"
description = "A library for the KageShirei agent that provides communication protocol related structs."
readme = "README.md"

[dependencies]
serde = { version = "1.0.210", default-features = false, features = ["derive", "rc", "alloc"] }
hex-literal = "0.4.1"
sea-orm = { version = "1.0.1", optional = true, features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono", "with-json"] }
serde_json = { version = "1.0.128", optional = true }

[features]
default = []
server = ["dep:sea-orm", "dep:serde_json"]

[lints]
workspace = true