[package]
name = "kageshirei-crypt"
version = "0.1.0"
edition = "2021"
categories = ["simulation"]
keywords = ["kageshirei", "agent", "library", "cryptography", "crypto"]
repository = "https://github.com/Kageshirei/KageShirei"
license-file = "../../LICENSE"
description = "A library for the KageShirei agent that provides cryptographic functionality."
readme = "README.md"

[dependencies]
rand = { version = "0.8.5", features = ["alloc", "nightly", "getrandom"], default-features = false }
argon2 = { version = "0.5.3", optional = true }
k256 = { version = "0.13.4", features = ["ecdh", "pkcs8"], optional = true }
sha3 = { version = "0.10.8", optional = true }
hkdf = { version = "0.12.4", optional = true }
chacha20poly1305 = { version = "0.10.1", optional = true }

[dev-dependencies]
libc = "0.2.159"

[features]
default = ["argon2", "hkdf", "asymmetric-encryption", "hex-encoding", "base32-encoding", "base64-encoding", "symmetric-encryption"]
argon2 = ["dep:argon2"]
hkdf = ["dep:hkdf"]
asymmetric-encryption = ["dep:k256", "dep:sha3", "hkdf", "symmetric-encryption"]
hex-encoding = []
base32-encoding = []
base64-encoding = []
symmetric-encryption = ["xchacha20poly1305"]
xchacha20poly1305 = ["dep:chacha20poly1305"]
sha3 = ["dep:sha3"]
server = []

[lints]
workspace = true