[package]
name = "kageshirei-crypt"
version = "0.1.0"
edition = "2021"
categories = ["simulation"]
keywords = ["kageshirei", "agent", "library", "cryptography", "crypto"]
repository = "https://github.com/Kageshirei/KageShirei"
license-file = "../../LICENSE"
description = "A library for the KageShirei agent that provides cryptographic functionality."
readme = "README.md"

[lib]
crate-type = ["rlib"]

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = "abort"
incremental = true

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
strip = true

[dependencies]
rand = { version = "0.8.5", default-features = false, features = ["alloc", "nightly", "getrandom"] }
argon2 = { version = "0.5.3", optional = true, default-features = false, features = ["alloc"] }
k256 = { version = "0.13.4", optional = true, default-features = false, features = ["ecdh", "pkcs8", "alloc"] }
sha3 = { version = "0.10.8", optional = true, default-features = false, features = [] }
hkdf = { version = "0.12.4", optional = true, default-features = false, features = [] }
chacha20poly1305 = { version = "0.10.1", optional = true, default-features = false, features = ["rand_core", "alloc"] }

[dev-dependencies]
libc = "0.2.159"

[features]
default = ["argon2", "hkdf", "asymmetric-encryption", "hex-encoding", "base32-encoding", "base64-encoding", "symmetric-encryption"]
argon2 = ["dep:argon2"]
hkdf = ["dep:hkdf"]
asymmetric-encryption = ["dep:k256", "dep:sha3", "hkdf", "symmetric-encryption"]
hex-encoding = []
base32-encoding = []
base64-encoding = []
symmetric-encryption = ["xchacha20poly1305"]
xchacha20poly1305 = ["dep:chacha20poly1305"]
sha3 = ["dep:sha3"]
server = []

[lints]
workspace = true