[package]
name = "kageshirei-extensions-macros"
version = "0.1.0"
edition = "2021"
categories = ["simulation"]
keywords = ["kageshirei", "agent", "library", "terminal", "emulator"]
repository = "https://github.com/Kageshirei/KageShirei"
license-file = "../../LICENSE"
description = "A library for the KageShirei agent that provides Win32 functionality."
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

[lints]
workspace = true
