[package]
name = "kageshirei-extensions"
version = "0.1.0"
edition = "2021"
categories = ["simulation"]
keywords = ["kageshirei", "agent", "library", "terminal", "emulator"]
repository = "https://github.com/Kageshirei/KageShirei"
license-file = "../../LICENSE"
description = "A library for the KageShirei agent that provides Win32 functionality."
readme = "README.md"

[dependencies]
glob = {version = "0.3.1"}
libloading = {version = "0.8.6"}
tokio = {version = "1.41.1", features = ["full"]}
async-trait = "0.1.83"
itertools = "0.13.0"
kageshirei-extensions-macros = {path = "../kageshirei-extensions-macros"}
tracing = "0.1.41"

[lints]
workspace = true
