[package]
name = "kageshirei-format-json"
authors.workspace = true
rust-version.workspace = true
version = "0.1.0"
edition = "2021"
categories = ["simulation"]
keywords = ["kageshirei", "agent", "library", "format", "json"]
repository = "https://github.com/Kageshirei/KageShirei"
license-file = "../../LICENSE"
description = "A library for KageShirei that provide JSON formatting utilities."
readme = "README.md"

[dependencies]
kageshirei-communication-protocol = { path = "../kageshirei-communication-protocol" }
serde = { version = "1.0.210", default-features = false, features = ["derive", "rc", "alloc"] }
serde_json = { version = "1.0.128", default-features = false, features = ["alloc"] }

[lints]
workspace = true
